Traductor a CI completo, soy una bestía